# synchro.rs

./: Cargo.toml  build.rs
audio-input/: Makefile.am  configure.ac
audio-input/input/: common.h
protocol/: Cargo.toml
protocol/src/: audio.rs  input.rs  lib.rs  output.rs  raw.rs
